infra/terraform/internet-gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

resource "aws_route_table" "main" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  } 

  tags = {
    "Name" = "main-igw"
  }

  depends_on = [
    aws_internet_gateway.main
  ]
}

resource "aws_route_table_association" "rta_subnet_public" {
  count = length(aws_subnet.main_subnet_public)

  subnet_id      = aws_subnet.main_subnet_public[count.index].id
  route_table_id = aws_route_table.main.id
}

# resource "aws_route_table_association" "rta_subnet_private" {
#   subnet_id      = aws_subnet.main_subnet_private.id
#   route_table_id = aws_route_table.main.id
# }

resource "aws_route_table_association" "rta_subnet_bastion" {
  subnet_id      = aws_subnet.main_subnet_bastion.id
  route_table_id = aws_route_table.main.id
}
